tambah layout upload

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,10 @@
                 android:icon="@drawable/ic_settings_black_24dp"
                 android:title="Setting" />
             <item
+                android:id="@+id/nav_uploads"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Uploads" />
+            <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Logout" />
