--- a/app/src/main/res/layout/activity_registration_form.xml
+++ b/app/src/main/res/layout/activity_registration_form.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/bg_login"
+        android:background="@color/colorAccent"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
@@ -29,8 +29,14 @@
 
             <EditText
                 android:id="@+id/name"
-                android:layout_width="match_parent"
+                android:drawableStart="@drawable/ic_perm_identity_white_24dp"
+                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
+                android:drawablePadding="5dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/colorPrimary"
+                android:padding="10dp"
                 android:hint="@string/name"
                 android:inputType="textPersonName"
                 android:maxLines="1"
@@ -45,13 +51,20 @@
 
             <EditText
                 android:id="@+id/nim"
-                android:layout_width="match_parent"
+                android:drawableStart="@drawable/ic_card_membership_white_24dp"
+                android:drawableLeft="@drawable/ic_card_membership_white_24dp"
+                android:drawablePadding="5dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/colorPrimary"
+                android:padding="10dp"
                 android:hint="@string/nim"
                 android:inputType="number"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textColorHint="@color/white"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -60,9 +73,15 @@
             android:layout_height="wrap_content">
 
             <EditText
+                android:drawableStart="@drawable/ic_timeline_white_24dp"
+                android:drawableLeft="@drawable/ic_timeline_white_24dp"
+                android:drawablePadding="5dp"
                 android:id="@+id/angkatan"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/colorPrimary"
+                android:padding="10dp"
                 android:hint="@string/angkatan"
                 android:inputType="number"
                 android:maxLines="1"
@@ -74,12 +93,12 @@
         <Button
             android:id="@+id/sign_up_button"
             style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:text="@string/action_sign_in_short"
-            android:textColor="@android:color/black"
+            android:textColor="@color/greyc"
             android:textStyle="bold" />
 
 
@@ -93,7 +112,7 @@
             android:background="@null"
             android:text="@string/btn_link_to_login"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/greyc"
             android:textSize="15dp" />
     </LinearLayout>
 
