--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorAccent"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
@@ -28,13 +28,20 @@
 
             <EditText
                 android:id="@+id/email"
-                android:layout_width="match_parent"
+                android:drawableStart="@drawable/ic_email_white_24dp"
+                android:drawableLeft="@drawable/ic_email_white_24dp"
+                android:drawablePadding="10dp"
+                android:background="@color/colorPrimary"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -44,7 +51,13 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="match_parent"
+                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+                android:drawablePadding="10dp"
+                android:background="@color/colorPrimary"
+                android:padding="10dp"
+                android:layout_width="250dp"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
                 android:focusableInTouchMode="true"
                 android:hint="@string/hint_password"
@@ -53,19 +66,20 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/sign_up_button"
             style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:text="NEXT>"
-            android:textColor="@android:color/black"
+            android:textColor="@color/greyc"
             android:textStyle="bold" />
 
 
@@ -79,7 +93,7 @@
             android:background="@null"
             android:text="@string/btn_link_to_login"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/greyc"
             android:textSize="15dp" />
     </LinearLayout>
 
