--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#293ba4</color>
+    <color name="colorPrimary">#90caf9</color>
     <color name="colorPrimaryDark">#292b3d</color>
-    <color name="colorAccent">#e8eaf6</color>
-
+    <color name="colorAccent">#f5f5f5</color>
+    <color name="greyc">#757575</color>
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
     <color name="bg_main">#428bca</color>
