--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#90caf9</color>
     <color name="colorPrimaryDark">#292b3d</color>
-    <color name="colorAccent">#f5f5f5</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="greyc">#757575</color>
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
