--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -40,7 +40,7 @@
             android:layout_width="200dp"
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:entries="@array/planets_array"/>
+            android:entries="@array/pelajaran_array"/>
 
         <ProgressBar
             android:id="@+id/progressbar"
