--- a/app/src/main/res/layout/literature.xml
+++ b/app/src/main/res/layout/literature.xml
@@ -11,25 +11,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/semester"
+            android:layout_width="200dp"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_menu_camera"/>
+            android:entries="@array/semester_array"/>
 
-        <TextView
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:text="Import Menu"/>
+        <Spinner
+            android:id="@+id/pelajaran"
+            android:layout_width="200dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Made by A2"/>
+        <Button
+            android:id="@+id/btnSearch"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:hint="Search"/>
 
     </LinearLayout>
 
